src/App.css
/* ... */
@keyframes spinner {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

/** Home page **/

.home h2 {
  margin-top: 30px;
  font-size: 3rem;
  display: inline-block;
}

.project-page.view-all, .blog-page.view-all, .blog-page .footer {
  display: none;
}

.view-all {
  font-size: 20px;
  margin-top: 30px;
}

#app {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #c3c3c2;
  overflow: auto;
}

.header_scroll {
  padding-top: 60px;
}

.scroll-down {
  -webkit-animation: bounce 2s infinite;
  animation: bounce 2s infinite;
}

.icon {
  display: inline-block;
}

.hero {
  width: 100%;
  object-fit: cover;
  max-width: none;
}

aside h1, aside h2, aside h3, aside p {
  color: #fff;
}

aside {
  position: absolute;
  top: 110px;
  margin: auto;
  text-align: center;
  width: 100%;
}

.slick-slide aside img {
  display: inline-block;
  margin: 0 5px 0 20px;
}

.slick-slide aside a {
  color: #fff;
  text-decoration: none;
}

.home .slick-slider p {
  font-size: 1.375rem;
  margin: 1.5rem 0;
  font-weight: 300;
}

.text-emoji {
  font-size: 1.5rem;
  font-weight: 300;
}

.social-icons {
  padding: .25rem 0;
  font-size: 3rem;
}

.social-icons a {
  padding: 0 .625rem;
}

#blog, #projects {
  padding: 15px 0 60px 0;
}

.home #blog, .home #projects {
  padding: 40px 0 85px 0;
}

.home #blog {
  background: url('images/blog-bg.jpg') no-repeat center fixed;
  background-size: auto auto;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  -ms-background-size: cover;
  min-height: 390px;
}

.home #blog h2 {
  color: #fff;
}

.home #blog .view-all {
  color: #fff;
}

.wrapper {
  font-weight: 100;
  font-size: 16px;
  margin-left: auto;
  /* margin-bottom: 40px; */
  -webkit-transition: top 4s ease;
  transition: top 4s ease;
  /* padding: 0 100; */
  color: #000;

}

.wrapper.single,.wrapper.about{
  margin-bottom: 100px;
}

/** SINGLE POST **/
.single .card-body{
  text-align: left;
}


/** CONTACT FORM **/
form{
  padding:30px;
}

textarea{
  border-radius:0!important;
}
input[type=text],input[type=email]{
  height:40px;
  border-radius:0;
}

.mailme a{
  color:#000;
  text-decoration:none;
}
.mailme i{
  margin-right:7px;
}

/** ABOUT **/

.mainDetails {
  padding: 25px 35px;
  border-bottom: 2px solid #0787c8;
}

#mainArea {
	padding: 0 40px;
}

#mainArea section{
  padding: 20px 0;
  border-bottom: 1px solid #ccc;
}

#mainArea section:last-child{
  border-bottom:0;
}

#mainArea article{
  padding-bottom:20px;
}

.sectionTitle h3,.sectionContent h4{
font-size: 24px;
}
/** HEADER **/

.logo {
  border: .5rem solid rgba(255, 255, 255, .2);
  max-height: 10rem;
}

header {
  display: block;
  /* background:rgba(0,0,0,0.5); */
  width: 100%;
  padding: 30px 0;
  overflow: auto;
  color: #fff;
}

.home .top{
  display:none;
}
.top {
  background: #0889cb;
  /* background: url('images/banner_bg.jpg'); */
  box-shadow: 6px 6px 13px 0px rgba(0, 0, 0, 0.19);
  width: 100%;
  z-index: 999;
  font-size: 3em;
  position: fixed;
}

/** NAV **/

/* Position and sizing of burger button */

nav.top-nav li {
  display: inline;
}

.selected {
  background: #0097db;
}

nav.top-nav li {
  float: left;
}

nav.top-nav a {
  display: block;
  margin: 0 10px;
}

nav.top-nav #headerButtons {
  float: right;
}

.bm-burger-button {
  /* position: fixed; */
  position: fixed;
  width: 36px;
  height: 30px;
  left: 36px;
  top: 36px;
}

/* Color/shape of burger icon bars */

.bm-burger-bars {
  /* background: #373a47; */
  background: #fff;
}

/* Position and sizing of clickable cross button */

.bm-cross-button {
  height: 24px;
  width: 24px;
}

/* Color/shape of close button cross */

.bm-cross {
  background: #bdc3c7;
}

/* General sidebar styles */

.bm-menu {
  background: #334c6a;
  padding: 2.5em 1.5em 0;
  font-size: 1.15em;
}

/* Morph shape necessary with bubble or elastic */

.bm-morph-shape {
  fill: #373a47;
}

/* Wrapper for item list */

.bm-item-list {
  color: #b8b7ad;
  padding: 0.8em;
}

/* Individual item */

.bm-item {
  display: inline-block;
}

/* Styling of overlay */

.bm-overlay {
  background: rgba(0, 0, 0, 0.3);
}

#headerButtons {
  list-style-type: none;
  margin: 0;
  padding: 0;
  text-align: center;
}

.bm-item-list #headerButtons li:not(:first-child) {
  text-align: left;
}

.bm-item-list #headerButtons li:not(:first-child) img {
  margin-right: 15px;
}

.navButton a {
  color: #fff;
  padding: 10px;
}

/** SIDEBAR **/

.sidenav {
  /* height: 100%;
  width: 25%;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
/* background: #1A237E; *
    overflow-x: hidden;
    padding-top: 20px;
    text-align: center; */
}

.sidenav a {
  font-size: 18px;
  color: #fff;
  text-decoration: none;
  display: block;
}

.sidenav a:hover {
  color: #f1f1f1;
}

/** MAIN **/

.main {
  /* margin-left: 25%; /* Same as the width of the sidenav */
  font-size: 28px;
  /* Increased text to enable scrolling */
  padding: 0px 10px;
  overflow: hidden;
}

/** FOOTER **/

.footer-wrap {
  position: relative;
}

footer {
  color: #fff;
  background-color: rgb(51, 76, 106);
  height: 70px;
  position: absolute;
  bottom: -70px;
  width: 100%;
}

footer i.fa {
  margin-left: 10px;
  color: #fff;
}

.footer {
  display: none;
}

.blog-page .footer {
  display: block;
}

.butter-icon {
  width: 100%;
  max-width: 200px;
  height: auto;
}

.footer {
  font-size: 17px;
}

/** Projects **/

.author {
  font-size: 14px;
  font-style: italic;
  margin-bottom: 15px;
}
/* ... */

